# CoxFormer

./: .readthedocs.yaml  README.md  pyproject.toml
Benchmark/: Bivalent_gene_classification_benchmark.ipynb  Celltype_annotation_benchmark.ipynb  Dosage_sensitivity_classification_benchmark.ipynb  Gene_expression_prediction_benchmark.ipynb  Methylation_classification_benchmark.ipynb  Pathological_region_detection_benchmark.ipynb  Super_resolution_enhancement_benchmark.ipynb  Transcription_factor_range_benchmark.ipynb
Tutorial/: Celltype_annotation_tutorial.ipynb  Co-expression_completion_tutorial.ipynb
docs/: requirements.txt
docs/source/: conf.py  home.md  index.rst  notebooks
docs/source/_static/: custom.css
scripts/: run_embedding_demo.sh  run_spatial_demo.sh
src/coxformer/embedding/: __init__.py  cli.py  complete.py  data.py  dimension_reduction.py  infer.py  model.py  train.py
src/coxformer/spatial/: __init__.py  cli.py  data.py  infer.py  model.py  train.py  utils.py
utils/: .Imputation_baseline_utils.py.baiduyun.uploading.cfg  .Pathological_region_detection_utils.py.baiduyun.uploading.cfg  .Super_resolution_enhancement_utils.py.baiduyun.uploading.cfg  Cell_level_task_utils.py  Gene_activity_score_prediction_utils.py  Gene_expression_prediction_utils.py  Gene_level_task_utils.py  Imputation_baseline_utils.py  Pathological_region_detection_utils.py  Super_resolution_enhancement_utils.py
