[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coxformer"
version = "0.1.0"
description = "CoxFormer spatial inference toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "torch",
  "torch_geometric",
  "anndata",
  "scanpy",
  "tqdm",
  "scikit-learn",
  "Pillow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
coxformer-impute = "coxformer.spatial.cli:main"
coxformer-embed = "coxformer.embedding.cli:main"